[b]Version 0.6.7[/b]:

(2009-03-05)
 * (Playlist) Try to figure out if a file is local (when the file is added
   to the playlist) not using QFile::exists, as it seems it can be slow
   with remote files. It might fix bug #2586395, although I can't test.

(2009-02-19)
 * Using software volume by default.

(2009-02-17)
 * Using multiple ini files to store the file settings by default now.

(2009-02-15)
 * Added preliminary support for the upcoming mplayer 1.0rc3.

(2009-02-09)
 * (ASS subtitles) The outline and shadow options now accept values with
   decimals.

(2009-02-04)
 * Now the default value for the "correct pts" option is auto.

(2009-01-31)
 * (Videopreview) Added a new option to remember the last folder used for
   saving the preview image. If not checked, it will suggest the same
   folder of the video to save the image.
 * New action toggle_stay_on_top, which toggles between "stay on top always" 
   and "stay on top never". If "stay on top while playing" is enabled, this
   action does nothing.

(2009-01-29)
 * Added two options (in the audio and subtitle menus) to allow the user to 
   enter the audio and subtitle delay (in milliseconds).

(2009-01-28)
 * Added names for the rest of dvdnav actions.
 * The dvdnav_mouse action is assigned to the left mouse button by default.
 * Added all dvdnav actions to the list of actions that can be selected with
   the mouse buttons.

(2009-01-27)
 * Fix: now spaces in arguments for mplayer (in Preferences->Advanced and 
   Options->View info and properties) are respected if they are between
   quotes. Now for instance this will work as expected:
     -heartbeat-cmd "gnome-screensaver-command -p &"
 * Fix: the playlist is not allowed to be docked in fullscreen mode.

(2009-01-26)
 * (Playlist) When a file is added to the playlist, if it was already in
   the list, it's moved to the end of the list.

(2009-01-24)
 * (Videopreview) Add jpg to the "extract frame as" combobox only if the